// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playlist icon should render icon 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  background="black"
  bbHeight={24}
  bbWidth={24}
  downArrow="white"
  fill="none"
  focusable={false}
  height={24}
  meetOrSlice={0}
  minX={0}
  minY={0}
  size={24}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": 24,
        "width": 24,
      },
    ]
  }
  upArrow="white"
  vbHeight={54}
  vbWidth={54}
  width={24}
>
  <RNSVGGroup
    fill={null}
    propList={
      Array [
        "fill",
      ]
    }
  >
    /* Background */
    <RNSVGPath
      d="M27 54c14.912 0 27-12.088 27-27S41.912 0 27 0 0 12.088 0 27s12.088 27 27 27z"
      fill={4278190080}
      propList={
        Array [
          "fill",
        ]
      }
    />
    /* Down Arrow */
    <RNSVGPath
      d="M28.828 36.892a9.884 9.884 0 01-1.828.177c-5.407 0-9.816-4.402-9.816-9.816 0-1.277.247-2.53.734-3.706l.285-.696-6.913-6.913-.753 1.221a19.223 19.223 0 00-2.859 10.1c0 10.651 8.665 19.316 19.316 19.316.607 0 1.22-.032 1.828-.089v5.838L39.327 41.82 28.822 31.314v5.578h.006z"
      fill={4294967295}
      propList={
        Array [
          "fill",
        ]
      }
    />
    /* Up Arrow */
    <RNSVGPath
      d="M26.994 7.938c-.797 0-1.594.05-2.385.151v-5.9L14.104 12.693l10.505 10.505v-5.452a9.77 9.77 0 012.385-.297c5.407 0 9.816 4.402 9.816 9.81a9.66 9.66 0 01-.734 3.706l-.285.695 6.913 6.913.753-1.22a19.224 19.224 0 002.858-10.1c0-10.652-8.67-19.316-19.321-19.316z"
      fill={4294967295}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`Playlist icon should render icon with colors and size 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  background="secondary"
  bbHeight={32}
  bbWidth={32}
  downArrow="white"
  fill="none"
  focusable={false}
  height={32}
  meetOrSlice={0}
  minX={0}
  minY={0}
  size={32}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {
        "flex": 0,
        "height": 32,
        "width": 32,
      },
    ]
  }
  upArrow="primary"
  vbHeight={54}
  vbWidth={54}
  width={32}
>
  <RNSVGGroup
    fill={null}
    propList={
      Array [
        "fill",
      ]
    }
  >
    /* Background */
    <RNSVGPath
      d="M27 54c14.912 0 27-12.088 27-27S41.912 0 27 0 0 12.088 0 27s12.088 27 27 27z"
      fill={4286396635}
      propList={
        Array [
          "fill",
        ]
      }
    />
    /* Down Arrow */
    <RNSVGPath
      d="M28.828 36.892a9.884 9.884 0 01-1.828.177c-5.407 0-9.816-4.402-9.816-9.816 0-1.277.247-2.53.734-3.706l.285-.696-6.913-6.913-.753 1.221a19.223 19.223 0 00-2.859 10.1c0 10.651 8.665 19.316 19.316 19.316.607 0 1.22-.032 1.828-.089v5.838L39.327 41.82 28.822 31.314v5.578h.006z"
      fill={4294967295}
      propList={
        Array [
          "fill",
        ]
      }
    />
    /* Up Arrow */
    <RNSVGPath
      d="M26.994 7.938c-.797 0-1.594.05-2.385.151v-5.9L14.104 12.693l10.505 10.505v-5.452a9.77 9.77 0 012.385-.297c5.407 0 9.816 4.402 9.816 9.81a9.66 9.66 0 01-.734 3.706l-.285.695 6.913 6.913.753-1.22a19.224 19.224 0 002.858-10.1c0-10.652-8.67-19.316-19.321-19.316z"
      fill={4286308974}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
